Texty - pridani citaci

--- a/texts/latex/includes/analyza.tex
+++ b/texts/latex/includes/analyza.tex
@@ -1,6 +1,6 @@
 \chapter{Analýza}
 
-Pro vývoj aplikace v této bakalářské práci byla zvolena novější metodika vývoje, která je modernější a v mnoha ohledech jednodušší než dříve používaný Rational Unified Process (RUP). Hlavní výhoda spočívá v tom, že se nevytváří hromady dokumentů, jejichž vytvoření zabere spoustu času a ve finále je většina z nich zbytečná. RUP má smysl spíše u velkých projektů, na kterých pracuje větší tým lidí a které jsou hodně rozsáhlé. RUP a agilní metodiky se liší už ve způsobu sběru požadavků. Zatímco RUP je orientovaný na use-case modely, vytvářené obvykle v jazyce Unified Modeling Language (UML), agilní metodiky evidují požadavky tzv. user stories.
+Pro vývoj aplikace v této bakalářské práci byla zvolena novější metodika vývoje, která je modernější a v mnoha ohledech jednodušší než dříve používaný Rational Unified Process (RUP)\cite{rup}. Hlavní výhoda spočívá v tom, že se nevytváří hromady dokumentů, jejichž vytvoření zabere spoustu času a ve finále je většina z nich zbytečná. RUP má smysl spíše u velkých projektů, na kterých pracuje větší tým lidí a které jsou hodně rozsáhlé. RUP a agilní metodiky se liší už ve způsobu sběru požadavků. Zatímco RUP je orientovaný na use-case modely, vytvářené obvykle v jazyce Unified Modeling Language (UML)\cite{uml}, agilní metodiky evidují požadavky tzv. user stories\cite{userstory}.
 
 \section{User stories}
 
@@ -9,7 +9,7 @@ Požadavky v rámci agilních metodik se nezapisují jako prosté úkoly, ale ma
 Jako \textbf{Uživatel}, chci \textbf{Funkcionalitu} abych dostal \textbf{Bussiness Value}
 \end{quote}
 
-Takto formulovaný požadavek je pro člověka mnohem srozumitelnější, protože vidí proč daný úkol splnit a co to komu přinese. Má tak jistotu, že nedělá něco zbytečného. User story je takový krátký příbeh a jako takový je lidským mozkem snáz vnímaný.
+Takto formulovaný požadavek je pro člověka mnohem srozumitelnější, protože vidí proč daný úkol splnit a co to komu přinese. Má tak jistotu, že nedělá něco zbytečného. User story\cite{userstory} je takový krátký příbeh a jako takový je lidským mozkem snáz vnímaný.
 
 User stories poslouží i po ukončení vývoje - při akceptačních testech. Stačí projít seznam user stories a pokud je v aplikace nalezen jejich \uv{odraz}, test byl úspěšný. Proto je lepší, aby user stories prošly schválením od zadavatele ještě před začátkem vývoje.
 
