--- a/texts/latex/includes/nasazeni.tex
+++ b/texts/latex/includes/nasazeni.tex
@@ -1,6 +1,6 @@
 \chapter{Nasazení aplikace}
 
-Titanium Studio je deklarováno jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian, jakožto zástupce Linuxu, a Mac OS X. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit. 
+Titanium Studio je deklarováno jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian\cite{debian}, jakožto zástupce Linuxu, a Mac OS X\cite{mac}. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit. 
 
 \section{Linux}
 Test nasazení byl proveden na virtuálním stroji s nainstalovaným operačním systémem Debian ve verzi 6.0.3 (i386).
