--- a/texts/latex/includes/uvod.tex
+++ b/texts/latex/includes/uvod.tex
@@ -1,3 +1,3 @@
 \chapter{Úvod}
 
-Zadáním mojí bakalářské práce je vytvoření nástroje primárně pro vývojáře, kteří pracují na projektech hostovaných na jednom z těchto tří verzovacích serverů: Google Code, Assembla a GitHub. Nástroj ale poslouží i ostatním vývojářům, byť nejsou primární cílovou skupinou. Využití najde i u neprogramátorů, a to u těch kteří svůj čas organizují metodikou \uv{Getting Things Done}. Hlavním přínosem mojí práce je usnadnění práce vývojářům, kteří pro správu projektů používají jednu z výše zmíněných služeb. Aplikace bude kompletně vytvořena za pomocí vývojového prostředí Titanium Studio v rámci platformy Titanium. Výstupem práce bude kromě samotné aplikace i rešerše této platformy a zhodnocení práce s ním.
+Zadáním mojí bakalářské práce je vytvoření nástroje primárně pro vývojáře, kteří pracují na projektech hostovaných na jednom z těchto tří verzovacích serverů: Google Code\cite{gcode}, Assembla\cite{assembla} a GitHub\cite{github}. Nástroj ale poslouží i ostatním vývojářům, byť nejsou primární cílovou skupinou. Využití najde i u neprogramátorů, a to u těch kteří svůj čas organizují metodikou \uv{Getting Things Done}. Hlavním přínosem mojí práce je usnadnění práce vývojářům, kteří pro správu projektů používají jednu z výše zmíněných služeb. Aplikace bude kompletně vytvořena za pomocí vývojového prostředí Titanium Studio v rámci platformy Titanium. Výstupem práce bude kromě samotné aplikace i rešerše této platformy a zhodnocení práce s ním.
