--- a/texts/latex/reference.bib
+++ b/texts/latex/reference.bib
@@ -1,196 +1,216 @@
-@Article{Chen01,
-  author = "Yong-Sheng Chen and Yi-Ping Hung and Chiou-Shann Fuh",
-  title  = "Fast Block Matching Algorithm Based on the Winner-Update Strategy",
-  journal= "IEEE Transactions On Image Processing",
-  pages  = "1212--1222",
-  volume =   10,
-  number =    8,
-  year   = 2001,
+@ONLINE{gtd:web,
+  title = "Metoda GTD (Getting Things Done)",
+  cited = "26.\,9.\,2008",
+  year = 2008,
+  url = "http://www.mitvsehotovo.cz/2008/09/metoda-gtd-getting-things-done/"
 }
 
-@Book{Serra93,
-  author    = "Jean Serra",
-  title     = "Image Analysis and Mathematical Morphology",
-  publisher = "Academic Press",
-  volume    =  1,
-  address   = "Oval Road, London, UK",
-  edition   = "4th",
-  year      =  1993,
+@ONLINE{gtd:wiki,
+  author = "{Přispěvatelé Wikipedie}",
+  title = "Getting Things Done",
+  cited = "17.\,4.\,2012",
+  year = 2012,
+  url = "http://cs.wikipedia.org/wiki/Getting_Things_Done"
 }
 
-% Pokud potrebujeme BibTeXu napovedet, kde je nutne zachovat velka a mala 
-% pismena, je potreba pouzit slozene zavorky {}. 
-% Vetsinou jde o zkratky a vlastnich jmena, ktera nejsou na zacatku nazvu 
-% publikace, pripadne o nazvy maker (viz napr. makro \LaTeX).
-
-@Misc{Weber04,
-  author = "Martin Weber",
-  title  = "Auto{T}race: {A} utility for converting bitmap into vector graphics",
-  note   = "\verb|http://autotrace.sourceforge.net|",
-  year   = 2004,
-}
-
-@InProceedings{Weiss99,
-  author    = "Yair Weiss",
-  title     = "Segmentation using eigenvectors: {A} unifying view",
-  booktitle = "Processings of IEEE International Conference on Computer Vision",
-  editor    = "Kim Zheng",
-  pages     = "975--982",
-  year      =  1999,
-}
-
-@InProceedings{Nam04,
-  author = 	  {Young Jin Nam and Chanik Park},
-  title = 	  {An efficient fair queuing algorithm for guaranteed disk bandwidth},
-  booktitle =     {Euro-Par 2004 Parallel Processing},
-  year =	  {2004},
-  editor =	  {M. Danelutto and D. Laforenza and M. Vanneschi},
-  month =	  {august},
-  series =	  {Lecture Notes in Computer Science},
-  number =	  3149,
-  pages =	  {799-802},
-  publisher =     {Springer Verlag, 2004},
-}
-
-
-% Nekdy musime dlouhe URL odkazy zalamovat rucne, jak je ukazano nize.
-% Vzdy ale uvedeme, kdy byla stranka naposledy aktualizovana, resp. pokud neni
-% uvedeno, datum, kdy jsme udaje z ni nacerpali.
-
-@Misc{CSTUG,
-  key    = "web:cstug",
-  author = "",
-  title  = "{CSTUG} --- {\CS}{\TeX} {U}sers {G}roup --- hlavní stránka",
-  note   = "\\ \verb|http://www.cstug.cz/|, stav z 2.\,3.\,2009",
-}
-
-@Misc{latexdocweb,
-  key    = "web:latexdocweb",
-  author = "",
-  title  = "{\LaTeX} --- online manuál",
-  note   = "\\ \verb|http://www.cstug.cz/latex/lm/frames.html|, stav ze 4.\,5.\,2009",
-}
-
-
-@Misc{infodp,
-  key    = "web:infodp",
-  author = "",
-  title  = "K336 {I}nfo --- pokyny pro psaní diplomových prací",
-  note   = "\\ \verb|https://info336.felk.cvut.cz/clanek.php?id=400|, stav ze 4.\,5.\,2009",
-}
-
-@Misc{infobp,
-  key    = "web:infobp",
-  author = "",
-  title  = "K336 {I}nfo --- pokyny pro psaní bakalářských prací",
-  note   = "\\ \verb|https://info336.felk.cvut.cz/clanek.php?id=504|, stav ze 4.\,5.\,2009",
-}
-
-%
-@Misc{ipe,
-  key    = "web:ipe",
-  author = "",
-  title  = "Grafický vektorový editor pro práce vhodný pro práci {\LaTeX}em",
-  note   = "\\ \verb|http://tclab.kaist.ac.kr/ipe/|, stav z 4.\,5.\,2009",
-}
-
-@Misc{info,
-  key    = "web:info",
-  author = "",
-  title  = "K336 {I}nfo",
-  note   = "\\ \verb|  http://info336.felk.cvut.cz|, stav ze 4.\,5.\,2009",
-}
-
-@Misc{latexutf,
-  key = "web:latexutf",
-  author = "",
-  title =  "Wiki Books {\LaTeX}/{I}nternationalization",
-  note =   "\\ \verb|http://en.wikibooks.org/wiki/LaTeX/Internationalization|, stav z 1.\,5.\,2009",
-}
-
-
-@Misc{latexwiki,
-  key    = "web:latexwiki",
-  author = "",
-  title  = "Wiki Books {\LaTeX}",
-  note   = "\\ \verb|http://en.wikibooks.org/wiki/LaTeX/|, stav z 3.\,4.\,2009",
-}
-
-
-@Misc{dp_jcu,
-  key = "web:dpjcu",
-  author =       "",
-  title =        "Pokyny pro psaní {DP} na {JČU}",
-  note =         "\\ \verb|http://home.pf.jcu.cz/~edpo/pravidla/pravidla.html|, stav z 8.\,12.\,2008",
-}
-
-@Misc{dp_mendel,
-  key = "web:dpmendel",
-  author =       "",
-  title =        "Pokyny pro psaní {DP} na {M}endelově univerzitě v {B}rně",
-  note =         "\\ \verb|http://old.mendelu.cz/~rybicka/zpract/#diplomky|, stav z 1.\,2.\,2008",
-}
-
-@COMMENT( The references below have first names abridged. Do not follow this,
-use full names whenever possible, BibTeX style will do the appropriate unifications. )
-
-@Book{kniha,
-  author =       "J. Žára and B. Beneš and P. Felkel",
-  title =        "Moderní počítačová grafika",
-  publisher =    "Computer Press s.r.o, Brno",
+@Book{gtd:book,
+  author =       "David Allen",
+  title =        "Mít vše hotovo",
+  publisher =    "Jan Melvil Publishing, s.r.o., Brno",
   edition =      "1st",
-  year   = 1998,
+  year   = 2008,
   note =	"In Czech",
+} 
+
+@ONLINE{scrum,
+  author = "Jan Horák",
+  title = "Scrum - metoda agilního programování",
+  cited = "5.\,11.\,2010",
+  year = 2010,
+  url = "http://wild-web.eu/blog/scrum-metoda-agilni-programovani/"
 }
 
-@Article{clanek,
-  author =       "P. Slavík",
-  title =        "Grammars and Rewriting Systems as Models for Graphical User Interfaces",
-  journal =      "Cognitive Systems",
-  pages =        "381--399",
-  volume =       4,
-  number =       "3/4",
-  year =         1997,
+@ONLINE{rup,
+  title = "RUP – Rational Unified Process",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://testovanisoftwaru.cz/manualni-testovani/modely-zivotniho-cyklu-softwaru/rup/"
 }
 
-@COMMENT( It is always better to use TeX diacritical escape sequences, 
-e.g. {\'{L}}, in the bibliography database, making it encoding independent 
-and thus compilable under different document encoding settings. 
-Do not follow these examples! )
-
-@InProceedings{sbornik,
-  author = 	  "M. Haindl and {\'{L}}. Kment and  P. Slavík",
-  title = 	  "Virtual Information Systems",
-  booktitle =     "WSCG'2000 --- Short communication papers",
-  year =	  2000,
-  pages =	  "22--27",
-  publisher =     "University of West Bohemia, Pilsen",
+@ONLINE{zivotnicyklus,
+  title = "Životní cyklus produktu",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://testovanisoftwaru.cz/manualni-testovani/zivotni-cyklus-produktu/"
 }
 
-@Misc{www,
-  key = "web:infogs",
-  author =       "",
-  title =        "Knihovna {G}rafické skupiny",
-  note =         "\\ \verb|http://www.cgg.cvut.cz/Bib/library/|, stav z 30.\,8.\,2001",
+@ONLINE{userstory,
+  author = "Zuzana Sochová",
+  title = "Proč píšeme User Story?",
+  cited = "2.\,11.\,2011",
+  year = 2011,
+  url = "http://soch.cz/blog/management/agile/proc-piseme-user-story/"
 }
 
+@ONLINE{tutorial:upload,
+  author = "Serge Meunier",
+  title = "Titanium Tutorial: How to upload a file to a server",
+  cited = "3.\,7.\,2009",
+  year = 2009,
+  url = "http://www.smokycogs.com/blog/titanium-tutorial-how-to-upload-a-file-to-a-server/"
+}
 
-@COMMENT(Another example of www sources referencing, posted by Petr Dlouhy April 2010)
+@ONLINE{selfpromo,
+  author = "Ondřej Šatera",
+  title = "Titanium Studio – napište si desktopovou aplikaci v JavaScriptu",
+  cited = "20.\,2.\,2012",
+  year = 2012,
+  url = "http://programujte.com/clanek/2012020900-titanium-studio-napiste-si-desktopovou-aplikaci-v-javascriptu/"
+}
 
-@ONLINE{wiki:framework,
+@ONLINE{mustache,
+  title = "Mustache - Logic-less templates",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://mustache.github.com/"
+}
+
+@ONLINE{gcode,
+  title = "Google Code",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://code.google.com/"
+}
+
+@ONLINE{assembla,
+  title = "Assembla",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.assembla.com/"
+}
+
+@ONLINE{github,
+  title = "GitHub",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.github.com/"
+}
+
+@ONLINE{rest,
+  title = "REST: architektura pro webové API",
+  cited = "3.\,8.\,2009",
+  year = 2019,
+  url = "http://www.zdrojak.cz/clanky/rest-architektura-pro-webove-api/"
+}
+
+@ONLINE{json,
+  title = "Introducing JSON",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.json.org/"
+}
+
+@ONLINE{prototypejs,
+  title = "Prototype JavaScript framework",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.prototypejs.org/"
+}
+
+@ONLINE{scriptaculous,
+  title = "script.aculo.us - web 2.0 javascript",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://script.aculo.us/"
+}
+
+@ONLINE{flash,
   author = "{Přispěvatelé Wikipedie}",
-  title = "Framework",
-  cited = "10.\,9.\,2009",
-  year =         2009,
-  url = "http://cs.wikipedia.org/wiki/Framework"
-  }
+  title = "Adobe Flash",
+  year = 2012,
+  url = "http://cs.wikipedia.org/wiki/Adobe_Flash"
+}
 
-@ONLINE{wiki:orm,
-  author = "{Přispěvatelé Wikipedie}",
-  title = "Object-relational mapping",
-  cited = "6.\,12.\,2009",
-  year =         2009,
-  url = "http://en.wikipedia.org/wiki/Object-relational_mapping"
-  }
+@ONLINE{silverlight,
+  title = "Microsoft® Silverlight™",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.microsoft.com/cze/web/silverlight/"
+}
 
+@ONLINE{uml,
+  title = "The Unified Modeling Language™",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.uml.org/"
+}
 
+@ONLINE{debian,
+  title = "Debian -- Univerzální operační systém",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.debian.org/"
+}
+
+@ONLINE{mac,
+  title = "Apple - OS X Lion - The world’s most advanced OS",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.apple.com/macosx/"
+}
+
+@ONLINE{jsunity,
+  title = "jsUnity - Lightweight Universal JavaScript Unit Testing Framework",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://jsunity.com/"
+}
+
+@ONLINE{coffeescript,
+  title = "CoffeeScript - a little language that compiles into JavaScript",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://coffeescript.org/"
+}
+
+@ONLINE{googleauth,
+  title = "Issue Tracker Data API Developer Guide",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://code.google.com/p/support/wiki/IssueTrackerAPI#Authentication"
+}
+
+@ONLINE{assemblaauth,
+  title = "Assembla REST API",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.assembla.com/spaces/breakoutdocs/wiki/Assembla_REST_API"
+}
+
+@ONLINE{github:summary,
+  title = "GitHub API v3",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://developer.github.com/v3/#authentication"
+}
+
+@ONLINE{github:oauth,
+  title = "OAuth | GitHub API",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://developer.github.com/v3/oauth/"
+}
+
+@ONLINE{sqlite,
+  title = "SQLite",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.sqlite.org/"
+}
+
+@ONLINE{wiki:sameorigin,
+  title = "{Přispěvatelé Wikipedie}",
+  cited = "28.\,3.\,2012",
+  year = 2012,
+  url = "http://en.wikipedia.org/wiki/Same_origin_policy"
+}
