Texty - zkompilovane citace

--- a/texts/latex/reference.bib
+++ b/texts/latex/reference.bib
@@ -177,7 +177,7 @@
   title = "Issue Tracker Data API Developer Guide",
   cited = "9.\,5.\,2012",
   year = 2012,
-  url = "http://code.google.com/p/support/wiki/IssueTrackerAPI#Authentication"
+  url = "http://code.google.com/p/support/wiki/IssueTrackerAPI"
 }
 
 @ONLINE{assemblaauth,
@@ -191,7 +191,7 @@
   title = "GitHub API v3",
   cited = "9.\,5.\,2012",
   year = 2012,
-  url = "http://developer.github.com/v3/#authentication"
+  url = "http://developer.github.com/v3/"
 }
 
 @ONLINE{github:oauth,
